--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "dotenv": "^16.4.7",
     "exceljs": "^4.4.0",
     "mongoose": "^8.12.2",
     "next": "15.2.3",
